<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            android:title="@string/contacts">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_phone_black_24dp"
                    android:title="+996 555 66 67 68" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@mipmap/whats_app_logo"
                    android:title="+996 555 66 67 68" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_shopping_cart_theme_24dp"
        android:title="@string/cart" />
    <item
        android:id="@+id/nav_manage"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>
</menu>